# CRK-CAMERA

./: README.md  mapping.json  pyproject.toml
src/: list_devices.py  main.py  save_serials.py  test_ffmpeg.py
src/api/v1/routers/: management.py  recording.py  sampling.py  test.py
src/services/: capture.py  loadcell.py  sampler.py  save.py  trigger_save.py  trigger_save_v2.py  trigger_save_v3.py
src/utils/: camera.py  device.py  ffmpeg.py  gst_pipeline.py  misc.py
tools/gst-nvjpegdec/: Makefile  main.cpp
