[project]
name = "crk-camera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "linuxpy>=0.23.0",
    "opencv-python-headless>=4.13.0.90",
    "pyudev>=0.24.4",
]

[dependency-groups]
dev = [
    "linuxpy[dev]>=0.23.0",
    "opencv-python>=4.13.0.90",
]
